--- a/Wisend/Wisend.csproj
+++ b/Wisend/Wisend.csproj
@@ -280,9 +280,9 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>50649</DevelopmentServerPort>
+          <DevelopmentServerPort>49287</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>https://wisend.ru</IISUrl>
+          <IISUrl>http://localhost:49287</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
